# VulnAPI

./: Dockerfile  README.md  pyproject.toml  supervisord.conf
apps/: graphql_app.py  grpc_server.py  jsonapi_app.py  jsonapi_app_second.py  soap_app.py  web_html.py
clients/: grpc_client.py  xmlrpc_client.py
vuln_app/: app.py  send_requests.py
vuln_app/endpoints/: SQL_Injection.py  open_redirect.py  ptrav.py  rce.py  ssti.py  xss.py  xxe.py
