[project]
name = "test-vuln-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cheroot>=10.0.1",
    "fastapi>=0.115.11",
    "flask>=3.1.0",
    "flask-graphql>=2.0.1",
    "flask-smorest>=0.45.0",
    "graphene>=2.1.9",
    "grpcio>=1.71.0",
    "jsonrpcserver>=5.0.9",
    "protobuf>=6.30.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "wsgidav>=4.3.3",
    "zeep>=4.3.1",
]
